<resources>
    <string name="app_name">Project</string>
    <string name="emailhint">email</string>
    <string name="contrasenahint">contraseña</string>
    <string name="Login">Login</string>
    <string name="usuario">correo electrónico</string>
    <string name="contrasena">contraseña</string>
    <string name="INGRESAR">INGRESAR</string>
    <string name="REGISTRARSE">Crear cuenta</string>
    <string name="repcontrasena">repetir contraseña</string>
    <string name="REGISTRAR">REGISTRAR</string>
    <string name="correo">email</string>
    <string name="miPerfil">Mi perfil</string>
    <string name="CerrarSesion">Cerrar sesión</string>
    <string name="Principal">Principal</string>
    <string name="Registro">Registro</string>


    <string name="facebook_app_id">199167630688546</string>
    <string name="fb_login_protocol_scheme">fb199167630688546</string>
    <string name="esculturas">Esculturas</string>
    <string name="escultores">Escultores</string>
    <string name="camara">Cámara</string>
    <string name="mapa">Mapa</string>
    <string name="Buscar">Buscar</string>
    <string name="editarperfil">Editar perfil</string>
    <string name="VOLVER">VOLVER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">nombre</string>
    <string name="edad">edad</string>
    <string name="masculino">masculino</string>
    <string name="femenino">femenino</string>
    <string name="guardar">guardar</string>
    <string name="EsculturasUdea">EsculturasUdeA</string>
    <string name="title_activity_maps">Map</string>
    <string name="Ar">Realidad Aumentada</string>
    <string name="title_activity_ubicacion_mapa">Map</string>

</resources>
