<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".EditarPerfilActivity">

        <EditText
            android:id="@+id/eNombre"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/whitesmoke"
            android:drawableStart="@mipmap/nameico"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textStyle="bold" />

    <EditText
            android:id="@+id/eEdad"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/whitesmoke"
            android:drawableStart="@mipmap/mayoricon"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/edad"
            android:inputType="number"
            android:padding="5dp"
            android:textStyle="bold" />


        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:id="@+id/masculino"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femenino"
                android:layout_marginTop="10dp"
                android:id="@+id/femenino"
                android:checked="false"
                android:textStyle="bold"
                android:layout_weight="1"/>

        </RadioGroup>


        <Button
            android:id="@+id/bGuardar"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@color/orangered"
            android:gravity="center"
            android:onClick="ClickGuardar"
            android:text="@string/guardar"
            android:textColor="@color/beige"
            android:textStyle="bold" />

</LinearLayout>