<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="corp.poopapps.afinal.LogginActivity">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/bRegistroGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnSignInFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bRegistroGoogle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/LogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:background="#34495e"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/green"
            android:src="@mipmap/statuevenusicon" />

        <EditText
            android:id="@+id/eUsuario"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:drawableStart="@mipmap/email"
            android:gravity="center"
            android:hint="@string/usuario"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/eContrasena"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:drawableStart="@mipmap/password"
            android:gravity="center"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:padding="3dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bIngreso"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@color/green"
            android:drawableStart="@mipmap/upbutton"
            android:onClick="ClickIngresar"
            android:text="@string/INGRESAR"
            android:textColor="@color/whitesmoke"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bRegistrarse"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="@color/whitesmoke"
            android:onClick="OnClickButton"
            android:text="@string/REGISTRARSE"
            android:textColor="@color/green"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
